--- a/src/app/header/sections/sections.component.css
+++ b/src/app/header/sections/sections.component.css
@@ -1,12 +1,19 @@
-.user { 
+.user {
 	width: 10%;
 	height: 10%;
 	padding-left: 10px;
 }
 
 .navbar-button {
-	height: 100%; 
+	height: 100%;
 	padding: 17px;
 	font-size: min(2.5vw, 2.5vh);
 }
-  
+
+.section-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+}
